added in mandatory fields source systems and site

--- a/angel_jpcode3/angel_access_tblPO.ipynb
+++ b/angel_jpcode3/angel_access_tblPO.ipynb
@@ -246,242 +246,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "79eebca2",
+   "execution_count": 60,
+   "id": "b67922a9",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>POID</th>\n",
-       "      <th>batch_load</th>\n",
-       "      <th>PONumber</th>\n",
-       "      <th>ProjectID</th>\n",
-       "      <th>RaisedBy</th>\n",
-       "      <th>Site</th>\n",
-       "      <th>Notes</th>\n",
-       "      <th>SSMA_TimeStamp</th>\n",
-       "      <th>DateCreated</th>\n",
-       "      <th>Alemba</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2025-08-15 17:57:00.771785</td>\n",
-       "      <td>34</td>\n",
-       "      <td>4</td>\n",
-       "      <td>11</td>\n",
-       "      <td>ALL s</td>\n",
-       "      <td>Test</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2023-03-29 11:01:06.620</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2025-08-15 17:57:00.771785</td>\n",
-       "      <td>PO1234444</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Chris Riley</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Test</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2023-03-29 11:01:06.620</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>16</td>\n",
-       "      <td>2025-08-15 17:57:00.771785</td>\n",
-       "      <td>40645512</td>\n",
-       "      <td>6</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>RLH</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2023-03-29 11:01:06.620</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>17</td>\n",
-       "      <td>2025-08-15 17:57:00.771785</td>\n",
-       "      <td>Unknown M715</td>\n",
-       "      <td>8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2023-03-29 11:01:06.620</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>18</td>\n",
-       "      <td>2025-08-15 17:57:00.771785</td>\n",
-       "      <td>RHLNet-10022021</td>\n",
-       "      <td>19</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2023-03-29 11:01:06.620</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1679</th>\n",
-       "      <td>2696</td>\n",
-       "      <td>2025-08-15 17:57:00.771785</td>\n",
-       "      <td>41178130</td>\n",
-       "      <td>38</td>\n",
-       "      <td>NAZ</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Replacement device</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2025-08-08 00:00:00.000</td>\n",
-       "      <td>2926824</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1680</th>\n",
-       "      <td>2697</td>\n",
-       "      <td>2025-08-15 17:57:00.771785</td>\n",
-       "      <td>41178650</td>\n",
-       "      <td>38</td>\n",
-       "      <td>NAZ</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2025-08-08 00:00:00.000</td>\n",
-       "      <td>2915050</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1681</th>\n",
-       "      <td>2698</td>\n",
-       "      <td>2025-08-15 17:57:00.771785</td>\n",
-       "      <td>41178649</td>\n",
-       "      <td>38</td>\n",
-       "      <td>Naz</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2025-08-08 00:00:00.000</td>\n",
-       "      <td>2914837</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1682</th>\n",
-       "      <td>2699</td>\n",
-       "      <td>2025-08-15 17:57:00.771785</td>\n",
-       "      <td>41177905</td>\n",
-       "      <td>38</td>\n",
-       "      <td>Johura</td>\n",
-       "      <td>RLH</td>\n",
-       "      <td>x1 Samsung A16 5G for Francesca Boote for Band...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2025-08-08 00:00:00.000</td>\n",
-       "      <td>2945915</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1683</th>\n",
-       "      <td>2700</td>\n",
-       "      <td>2025-08-15 17:57:00.771785</td>\n",
-       "      <td>41178651</td>\n",
-       "      <td>38</td>\n",
-       "      <td>NAZ</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2025-08-08 00:00:00.000</td>\n",
-       "      <td>2915123</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1684 rows × 10 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      POID                 batch_load         PONumber  ProjectID  \\\n",
-       "0        1 2025-08-15 17:57:00.771785               34          4   \n",
-       "1        2 2025-08-15 17:57:00.771785        PO1234444          4   \n",
-       "2       16 2025-08-15 17:57:00.771785         40645512          6   \n",
-       "3       17 2025-08-15 17:57:00.771785     Unknown M715          8   \n",
-       "4       18 2025-08-15 17:57:00.771785  RHLNet-10022021         19   \n",
-       "...    ...                        ...              ...        ...   \n",
-       "1679  2696 2025-08-15 17:57:00.771785         41178130         38   \n",
-       "1680  2697 2025-08-15 17:57:00.771785         41178650         38   \n",
-       "1681  2698 2025-08-15 17:57:00.771785         41178649         38   \n",
-       "1682  2699 2025-08-15 17:57:00.771785         41177905         38   \n",
-       "1683  2700 2025-08-15 17:57:00.771785         41178651         38   \n",
-       "\n",
-       "         RaisedBy   Site                                              Notes  \\\n",
-       "0              11  ALL s                                               Test   \n",
-       "1     Chris Riley      1                                               Test   \n",
-       "2             NaN    RLH                                                NaN   \n",
-       "3             NaN    NaN                                                NaN   \n",
-       "4             NaN    NaN                                                NaN   \n",
-       "...           ...    ...                                                ...   \n",
-       "1679          NAZ    NaN                                 Replacement device   \n",
-       "1680          NAZ    NaN                                                NaN   \n",
-       "1681          Naz    NaN                                                NaN   \n",
-       "1682       Johura    RLH  x1 Samsung A16 5G for Francesca Boote for Band...   \n",
-       "1683          NAZ    NaN                                                NaN   \n",
-       "\n",
-       "      SSMA_TimeStamp             DateCreated   Alemba  \n",
-       "0                NaN 2023-03-29 11:01:06.620      NaN  \n",
-       "1                NaN 2023-03-29 11:01:06.620      NaN  \n",
-       "2                NaN 2023-03-29 11:01:06.620      NaN  \n",
-       "3                NaN 2023-03-29 11:01:06.620      NaN  \n",
-       "4                NaN 2023-03-29 11:01:06.620      NaN  \n",
-       "...              ...                     ...      ...  \n",
-       "1679             NaN 2025-08-08 00:00:00.000  2926824  \n",
-       "1680             NaN 2025-08-08 00:00:00.000  2915050  \n",
-       "1681             NaN 2025-08-08 00:00:00.000  2914837  \n",
-       "1682             NaN 2025-08-08 00:00:00.000  2945915  \n",
-       "1683             NaN 2025-08-08 00:00:00.000  2915123  \n",
-       "\n",
-       "[1684 rows x 10 columns]"
+       "Index(['POID', 'batch_load', 'PONumber', 'ProjectID', 'RaisedBy', 'Site',\n",
+       "       'Notes', 'SSMA_TimeStamp', 'DateCreated', 'Alemba'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "parsed_access_tblpo_23_25"
+    "parsed_access_tblpo_23_25.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff4aa8c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "mandatory_fields = [\"POID\", \"PONumber\", \"RaisedBy\", \"Site\", \"Notes\", \"DateCreated\", \"Alemba\"]\n",
+    "source_system = \"ACCESS\"\n",
+    "system_table = \"tblPO\"\n",
+    "data_period = \"23-24 to 24-25\"\n",
+    "date_checked = datetime.date.today()\n",
+    "\n",
+    "\n",
+    "sites = [\"RLH\", \"WCH\", \"SBH\", \"MEH\", \"NUH\", \"WXH\"]"
    ]
   }
  ],
