fixing the frmat error section in progress

--- a/angel_jpcode3/angel_access_tblPO.ipynb
+++ b/angel_jpcode3/angel_access_tblPO.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 72,
    "id": "bd7a147a",
    "metadata": {},
    "outputs": [],
@@ -241,12 +241,14 @@
     "parsed_access_tblpo_23_25[\"RaisedBy\"] = parsed_access_tblpo_23_25[\"RaisedBy\"].str.strip().replace(\"\", np.nan)\n",
     "parsed_access_tblpo_23_25[\"Site\"] = parsed_access_tblpo_23_25[\"Site\"].str.strip().replace(\"\", np.nan)\n",
     "parsed_access_tblpo_23_25[\"Notes\"] = parsed_access_tblpo_23_25[\"Notes\"].str.strip().replace(\"\", np.nan)\n",
-    "parsed_access_tblpo_23_25[\"Alemba\"] = parsed_access_tblpo_23_25[\"Alemba\"].str.strip().replace(\"\", np.nan)"
+    "parsed_access_tblpo_23_25[\"Alemba\"] = parsed_access_tblpo_23_25[\"Alemba\"].str.strip().replace(\"\", np.nan)\n",
+    "parsed_access_tblpo_23_25[\"parsed_POID\"] = pd.to_numeric(parsed_access_tblpo_23_25[\"POID\"], errors=\"coerce\").astype(\"Int64\")\n",
+    "parsed_access_tblpo_23_25[\"parsed_ProjectID\"] = pd.to_numeric(parsed_access_tblpo_23_25[\"ProjectID\"], errors=\"coerce\").astype(\"Int64\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 73,
    "id": "b67922a9",
    "metadata": {},
    "outputs": [
@@ -254,11 +256,12 @@
      "data": {
       "text/plain": [
        "Index(['POID', 'batch_load', 'PONumber', 'ProjectID', 'RaisedBy', 'Site',\n",
-       "       'Notes', 'SSMA_TimeStamp', 'DateCreated', 'Alemba'],\n",
+       "       'Notes', 'SSMA_TimeStamp', 'DateCreated', 'Alemba', 'parsed_POID',\n",
+       "       'parsed_ProjectID'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,14 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "ff4aa8c3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime\n",
     "\n",
-    "mandatory_fields = [\"POID\", \"PONumber\", \"RaisedBy\", \"Site\", \"Notes\", \"DateCreated\", \"Alemba\"]\n",
+    "mandatory_fields = [\"parsed_POID\", \"PONumber\", \"parsed_ProjectID\", \"RaisedBy\", \"Site\", \"Notes\", \"DateCreated\", \"Alemba\"]\n",
     "source_system = \"ACCESS\"\n",
     "system_table = \"tblPO\"\n",
     "data_period = \"23-24 to 24-25\"\n",
@@ -284,6 +287,326 @@
     "\n",
     "\n",
     "sites = [\"RLH\", \"WCH\", \"SBH\", \"MEH\", \"NUH\", \"WXH\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "836121b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tblPO errors\n",
+    "\n",
+    "summary_records = []\n",
+    "for field in mandatory_fields:\n",
+    "    missing_count = parsed_access_tblpo_23_25[field].isna().sum()\n",
+    "    summary_records.append({\n",
+    "        \"error_type\": \"Missing Field\",\n",
+    "        \"source_system\": source_system,\n",
+    "        \"system_table\": system_table,\n",
+    "        \"data_period\": data_period,\n",
+    "        \"date_checked\": date_checked,\n",
+    "        \"field_name\": field,\n",
+    "        \"error_count\": missing_count\n",
+    "    })\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# format error / invalid format\n",
+    "for field in mandatory_fields:\n",
+    "    raw_field = field.replace(\"parsed_\", \"\")\n",
+    "    format_error_count = parsed_access_tblpo_23_25[parsed_access_tblpo_23_25[raw_field].notna() & parsed_access_tblpo_23_25[field].isna()].shape[0]\n",
+    "    summary_records.append({\n",
+    "        \"error_type\": \"Invalid Format\",\n",
+    "        \"source_system\": source_system,\n",
+    "        \"system_table\": system_table,\n",
+    "        \"data_period\": data_period,\n",
+    "        \"date_checked\": date_checked,\n",
+    "        \"field_name\": field,\n",
+    "        \"error_count\": format_error_count\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "c46b5a62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "format_error_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "56fa02c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error_summary_access_tblpo = pd.DataFrame(summary_records)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "065e84da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>error_type</th>\n",
+       "      <th>source_system</th>\n",
+       "      <th>system_table</th>\n",
+       "      <th>data_period</th>\n",
+       "      <th>date_checked</th>\n",
+       "      <th>field_name</th>\n",
+       "      <th>error_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>ACCESS</td>\n",
+       "      <td>tblPO</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-15</td>\n",
+       "      <td>parsed_POID</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>ACCESS</td>\n",
+       "      <td>tblPO</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-15</td>\n",
+       "      <td>PONumber</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>ACCESS</td>\n",
+       "      <td>tblPO</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-15</td>\n",
+       "      <td>parsed_ProjectID</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>ACCESS</td>\n",
+       "      <td>tblPO</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-15</td>\n",
+       "      <td>RaisedBy</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>ACCESS</td>\n",
+       "      <td>tblPO</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-15</td>\n",
+       "      <td>Site</td>\n",
+       "      <td>516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>ACCESS</td>\n",
+       "      <td>tblPO</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-15</td>\n",
+       "      <td>Notes</td>\n",
+       "      <td>764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>ACCESS</td>\n",
+       "      <td>tblPO</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-15</td>\n",
+       "      <td>DateCreated</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Missing Field</td>\n",
+       "      <td>ACCESS</td>\n",
+       "      <td>tblPO</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-15</td>\n",
+       "      <td>Alemba</td>\n",
+       "      <td>477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Invalid Format</td>\n",
+       "      <td>ACCESS</td>\n",
+       "      <td>tblPO</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-15</td>\n",
+       "      <td>parsed_POID</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Invalid Format</td>\n",
+       "      <td>ACCESS</td>\n",
+       "      <td>tblPO</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-15</td>\n",
+       "      <td>PONumber</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Invalid Format</td>\n",
+       "      <td>ACCESS</td>\n",
+       "      <td>tblPO</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-15</td>\n",
+       "      <td>parsed_ProjectID</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Invalid Format</td>\n",
+       "      <td>ACCESS</td>\n",
+       "      <td>tblPO</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-15</td>\n",
+       "      <td>RaisedBy</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Invalid Format</td>\n",
+       "      <td>ACCESS</td>\n",
+       "      <td>tblPO</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-15</td>\n",
+       "      <td>Site</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Invalid Format</td>\n",
+       "      <td>ACCESS</td>\n",
+       "      <td>tblPO</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-15</td>\n",
+       "      <td>Notes</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Invalid Format</td>\n",
+       "      <td>ACCESS</td>\n",
+       "      <td>tblPO</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-15</td>\n",
+       "      <td>DateCreated</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Invalid Format</td>\n",
+       "      <td>ACCESS</td>\n",
+       "      <td>tblPO</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-15</td>\n",
+       "      <td>Alemba</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        error_type source_system system_table     data_period date_checked  \\\n",
+       "0    Missing Field        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
+       "1    Missing Field        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
+       "2    Missing Field        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
+       "3    Missing Field        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
+       "4    Missing Field        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
+       "5    Missing Field        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
+       "6    Missing Field        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
+       "7    Missing Field        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
+       "8   Invalid Format        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
+       "9   Invalid Format        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
+       "10  Invalid Format        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
+       "11  Invalid Format        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
+       "12  Invalid Format        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
+       "13  Invalid Format        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
+       "14  Invalid Format        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
+       "15  Invalid Format        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
+       "\n",
+       "          field_name  error_count  \n",
+       "0        parsed_POID            0  \n",
+       "1           PONumber           31  \n",
+       "2   parsed_ProjectID            0  \n",
+       "3           RaisedBy           39  \n",
+       "4               Site          516  \n",
+       "5              Notes          764  \n",
+       "6        DateCreated            0  \n",
+       "7             Alemba          477  \n",
+       "8        parsed_POID            0  \n",
+       "9           PONumber            0  \n",
+       "10  parsed_ProjectID            0  \n",
+       "11          RaisedBy            0  \n",
+       "12              Site            0  \n",
+       "13             Notes            0  \n",
+       "14       DateCreated            0  \n",
+       "15            Alemba            0  "
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "error_summary_access_tblpo"
    ]
   }
  ],
