--- a/angel_jpcode3/angel_access_tblPO.ipynb
+++ b/angel_jpcode3/angel_access_tblPO.ipynb
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 92,
    "id": "ff4aa8c3",
    "metadata": {},
    "outputs": [],
@@ -286,12 +286,15 @@
     "date_checked = datetime.date.today()\n",
     "\n",
     "\n",
-    "sites = [\"RLH\", \"WCH\", \"SBH\", \"MEH\", \"NUH\", \"WXH\"]"
+    "\n",
+    "allowed_start_date = pd.to_datetime(\"2023-01-01\")\n",
+    "allowed_end_date = pd.to_datetime(\"2025-08-11\")\n",
+    "allowed_sites = [\"RLH\", \"WCH\", \"SBH\", \"MEH\", \"NUH\", \"WXH\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 101,
    "id": "836121b1",
    "metadata": {},
    "outputs": [],
@@ -314,10 +317,13 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "# format error / invalid format\n",
+    "# format error / invalid format #revising tbc\n",
     "for field in mandatory_fields:\n",
+    "    if not field.startswith(\"parsed_\"):\n",
+    "        continue\n",
     "    raw_field = field.replace(\"parsed_\", \"\")\n",
+    "    if field not in parsed_access_tblpo_23_25.columns or raw_field not in parsed_access_tblpo_23_25:\n",
+    "        continue\n",
     "    format_error_count = parsed_access_tblpo_23_25[parsed_access_tblpo_23_25[raw_field].notna() & parsed_access_tblpo_23_25[field].isna()].shape[0]\n",
     "    summary_records.append({\n",
     "        \"error_type\": \"Invalid Format\",\n",
@@ -327,12 +333,49 @@
     "        \"date_checked\": date_checked,\n",
     "        \"field_name\": field,\n",
     "        \"error_count\": format_error_count\n",
-    "    })"
+    "    })\n",
+    "\n",
+    "\n",
+    "\n",
+    "# out of range error - site\n",
+    "out_of_range_site_count = parsed_access_tblpo_23_25[\n",
+    "    parsed_access_tblpo_23_25[\"Site\"].notna() &\n",
+    "    ~parsed_access_tblpo_23_25[\"Site\"].isin(allowed_sites)].shape[0]\n",
+    "\n",
+    "summary_records.append({\n",
+    "    \"error_type\": \"Out of Range Values\",\n",
+    "    \"source_system\": source_system,\n",
+    "    \"system_table\": system_table,\n",
+    "    \"data_period\": data_period,\n",
+    "    \"date_checked\": date_checked,\n",
+    "    \"field_name\": \"Site\",\n",
+    "    \"error_count\": out_of_range_site_count\n",
+    "})\n",
+    "\n",
+    "\n",
+    "\n",
+    "# out of range error - date created / date entry\n",
+    "# out of range error - date\n",
+    "out_of_range_date_count = parsed_access_tblpo_23_25[parsed_access_tblpo_23_25[\"DateCreated\"].notna() &\n",
+    "(\n",
+    "    (parsed_access_tblpo_23_25[\"DateCreated\"] < allowed_start_date) |\n",
+    "    (parsed_access_tblpo_23_25[\"DateCreated\"] > allowed_end_date)\n",
+    ")].shape[0]\n",
+    "\n",
+    "summary_records.append({\n",
+    "    \"error_type\": \"Out of Range Dates\",\n",
+    "    \"source_system\": source_system,\n",
+    "    \"system_table\": system_table,\n",
+    "    \"data_period\": data_period,\n",
+    "    \"date_checked\": date_checked,\n",
+    "    \"field_name\": \"DateCreated\",\n",
+    "    \"error_count\": out_of_range_date_count\n",
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 98,
    "id": "c46b5a62",
    "metadata": {},
    "outputs": [
@@ -342,7 +385,7 @@
        "0"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 99,
    "id": "56fa02c3",
    "metadata": {},
    "outputs": [],
@@ -363,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 100,
    "id": "065e84da",
    "metadata": {},
    "outputs": [
@@ -495,52 +538,22 @@
        "      <td>tblPO</td>\n",
        "      <td>23-24 to 24-25</td>\n",
        "      <td>2025-08-15</td>\n",
-       "      <td>PONumber</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblPO</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-15</td>\n",
        "      <td>parsed_ProjectID</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblPO</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-15</td>\n",
-       "      <td>RaisedBy</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Invalid Format</td>\n",
+       "      <th>10</th>\n",
+       "      <td>Out of Range Values</td>\n",
        "      <td>ACCESS</td>\n",
        "      <td>tblPO</td>\n",
        "      <td>23-24 to 24-25</td>\n",
        "      <td>2025-08-15</td>\n",
        "      <td>Site</td>\n",
-       "      <td>0</td>\n",
+       "      <td>85</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblPO</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-15</td>\n",
-       "      <td>Notes</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Invalid Format</td>\n",
+       "      <th>11</th>\n",
+       "      <td>Out of Range Dates</td>\n",
        "      <td>ACCESS</td>\n",
        "      <td>tblPO</td>\n",
        "      <td>23-24 to 24-25</td>\n",
@@ -548,59 +561,41 @@
        "      <td>DateCreated</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Invalid Format</td>\n",
-       "      <td>ACCESS</td>\n",
-       "      <td>tblPO</td>\n",
-       "      <td>23-24 to 24-25</td>\n",
-       "      <td>2025-08-15</td>\n",
-       "      <td>Alemba</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        error_type source_system system_table     data_period date_checked  \\\n",
-       "0    Missing Field        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
-       "1    Missing Field        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
-       "2    Missing Field        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
-       "3    Missing Field        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
-       "4    Missing Field        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
-       "5    Missing Field        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
-       "6    Missing Field        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
-       "7    Missing Field        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
-       "8   Invalid Format        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
-       "9   Invalid Format        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
-       "10  Invalid Format        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
-       "11  Invalid Format        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
-       "12  Invalid Format        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
-       "13  Invalid Format        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
-       "14  Invalid Format        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
-       "15  Invalid Format        ACCESS        tblPO  23-24 to 24-25   2025-08-15   \n",
+       "             error_type source_system system_table     data_period  \\\n",
+       "0         Missing Field        ACCESS        tblPO  23-24 to 24-25   \n",
+       "1         Missing Field        ACCESS        tblPO  23-24 to 24-25   \n",
+       "2         Missing Field        ACCESS        tblPO  23-24 to 24-25   \n",
+       "3         Missing Field        ACCESS        tblPO  23-24 to 24-25   \n",
+       "4         Missing Field        ACCESS        tblPO  23-24 to 24-25   \n",
+       "5         Missing Field        ACCESS        tblPO  23-24 to 24-25   \n",
+       "6         Missing Field        ACCESS        tblPO  23-24 to 24-25   \n",
+       "7         Missing Field        ACCESS        tblPO  23-24 to 24-25   \n",
+       "8        Invalid Format        ACCESS        tblPO  23-24 to 24-25   \n",
+       "9        Invalid Format        ACCESS        tblPO  23-24 to 24-25   \n",
+       "10  Out of Range Values        ACCESS        tblPO  23-24 to 24-25   \n",
+       "11   Out of Range Dates        ACCESS        tblPO  23-24 to 24-25   \n",
        "\n",
-       "          field_name  error_count  \n",
-       "0        parsed_POID            0  \n",
-       "1           PONumber           31  \n",
-       "2   parsed_ProjectID            0  \n",
-       "3           RaisedBy           39  \n",
-       "4               Site          516  \n",
-       "5              Notes          764  \n",
-       "6        DateCreated            0  \n",
-       "7             Alemba          477  \n",
-       "8        parsed_POID            0  \n",
-       "9           PONumber            0  \n",
-       "10  parsed_ProjectID            0  \n",
-       "11          RaisedBy            0  \n",
-       "12              Site            0  \n",
-       "13             Notes            0  \n",
-       "14       DateCreated            0  \n",
-       "15            Alemba            0  "
+       "   date_checked        field_name  error_count  \n",
+       "0    2025-08-15       parsed_POID            0  \n",
+       "1    2025-08-15          PONumber           31  \n",
+       "2    2025-08-15  parsed_ProjectID            0  \n",
+       "3    2025-08-15          RaisedBy           39  \n",
+       "4    2025-08-15              Site          516  \n",
+       "5    2025-08-15             Notes          764  \n",
+       "6    2025-08-15       DateCreated            0  \n",
+       "7    2025-08-15            Alemba          477  \n",
+       "8    2025-08-15       parsed_POID            0  \n",
+       "9    2025-08-15  parsed_ProjectID            0  \n",
+       "10   2025-08-15              Site           85  \n",
+       "11   2025-08-15       DateCreated            0  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
