added in and revised out of range errors

--- a/angel_jpcode3/angel_access_tblPO.ipynb
+++ b/angel_jpcode3/angel_access_tblPO.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "836121b1",
    "metadata": {},
    "outputs": [],
@@ -355,7 +355,7 @@
     "\n",
     "\n",
     "# out of range error - date created / date entry\n",
-    "# out of range error - date\n",
+    "\n",
     "out_of_range_date_count = parsed_access_tblpo_23_25[parsed_access_tblpo_23_25[\"DateCreated\"].notna() &\n",
     "(\n",
     "    (parsed_access_tblpo_23_25[\"DateCreated\"] < allowed_start_date) |\n",
@@ -370,7 +370,11 @@
     "    \"date_checked\": date_checked,\n",
     "    \"field_name\": \"DateCreated\",\n",
     "    \"error_count\": out_of_range_date_count\n",
-    "})"
+    "})\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Duplicate PO numbers - flag this as well just in case there's need to revise or amend in data entry process\n"
    ]
   },
   {
