--- a/angel_jpcode3/angel_access_tblPO.ipynb
+++ b/angel_jpcode3/angel_access_tblPO.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 111,
    "id": "df13ca24",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 112,
    "id": "3f94c860",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "(758, 9)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 113,
    "id": "bbb33b15",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 114,
    "id": "e74cc1d2",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "758"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 115,
    "id": "306d34f5",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
        "631"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 116,
    "id": "92bc80d8",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
        "295"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 117,
    "id": "e3f1eab9",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 118,
    "id": "cb10afab",
    "metadata": {},
    "outputs": [],
@@ -181,17 +181,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 119,
    "id": "314851b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot insert batch_load, already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_11528\\4166510180.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0maccess_tblpo_23_25\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"batch_load\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mld_add\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\Users\\angel\\anaconda3\\Lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, loc, column, value, allow_duplicates)\u001b[0m\n\u001b[0;32m   5141\u001b[0m                 \u001b[1;34m\"'self.flags.allows_duplicate_labels' is False.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5142\u001b[0m             )\n\u001b[0;32m   5143\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mallow_duplicates\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mcolumn\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5144\u001b[0m             \u001b[1;31m# Should this be a different kind of error??\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5145\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"cannot insert {column}, already exists\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5146\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5147\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"loc must be int\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5148\u001b[0m         \u001b[1;31m# convert non stdlib ints to satisfy typing checks\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: cannot insert batch_load, already exists"
+     ]
+    }
+   ],
    "source": [
     "access_tblpo_23_25.insert(1, \"batch_load\", ld_add)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 120,
    "id": "ec08cd6d",
    "metadata": {},
    "outputs": [],
@@ -201,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 121,
    "id": "388b4263",
    "metadata": {},
    "outputs": [
@@ -221,7 +234,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 122,
    "id": "bd7a147a",
    "metadata": {},
    "outputs": [],
@@ -248,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 123,
    "id": "b67922a9",
    "metadata": {},
    "outputs": [
@@ -261,7 +274,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 124,
    "id": "ff4aa8c3",
    "metadata": {},
    "outputs": [],
@@ -374,7 +387,67 @@
     "\n",
     "\n",
     "\n",
-    "# Duplicate PO numbers - flag this as well just in case there's need to revise or amend in data entry process\n"
+    "# Duplicate PO numbers - flag this as well just in case there's need to revise or amend in data entry process\n",
+    "\n",
+    "df_a = parsed_access_tblpo_23_25\n",
+    "po = \"PONumber\"\n",
+    "duplicate_count_po = df_a[po].dropna().duplicated().sum()\n",
+    "\n",
+    "if duplicate_count_po > 0:\n",
+    "    summary_records.append({\n",
+    "    \"error_type\": \"Duplicate PO Number\",\n",
+    "    \"source_system\": source_system,\n",
+    "    \"system_table\": system_table,\n",
+    "    \"data_period\": data_period,\n",
+    "    \"date_checked\": date_checked,\n",
+    "    \"field_name\": \"PONumber\",\n",
+    "    \"error_count\": duplicate_count_po\n",
+    "    })\n",
+    "\n",
+    "\n",
+    "# Unexpected Value - PO doesnt exist in oracle data list fo PO orders\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "d3c6c2cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "219"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parsed_access_tblpo_23_25['PONumber'].duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "d70a9c6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "189"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parsed_access_tblpo_23_25['PONumber'].dropna().duplicated().sum()"
    ]
   },
   {
@@ -400,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 136,
    "id": "56fa02c3",
    "metadata": {},
    "outputs": [],
@@ -410,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 137,
    "id": "065e84da",
    "metadata": {},
    "outputs": [
@@ -565,6 +638,16 @@
        "      <td>DateCreated</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Duplicate PO Number</td>\n",
+       "      <td>ACCESS</td>\n",
+       "      <td>tblPO</td>\n",
+       "      <td>23-24 to 24-25</td>\n",
+       "      <td>2025-08-15</td>\n",
+       "      <td>PONumber</td>\n",
+       "      <td>189</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -583,6 +666,7 @@
        "9        Invalid Format        ACCESS        tblPO  23-24 to 24-25   \n",
        "10  Out of Range Values        ACCESS        tblPO  23-24 to 24-25   \n",
        "11   Out of Range Dates        ACCESS        tblPO  23-24 to 24-25   \n",
+       "12  Duplicate PO Number        ACCESS        tblPO  23-24 to 24-25   \n",
        "\n",
        "   date_checked        field_name  error_count  \n",
        "0    2025-08-15       parsed_POID            0  \n",
@@ -596,10 +680,11 @@
        "8    2025-08-15       parsed_POID            0  \n",
        "9    2025-08-15  parsed_ProjectID            0  \n",
        "10   2025-08-15              Site           85  \n",
-       "11   2025-08-15       DateCreated            0  "
+       "11   2025-08-15       DateCreated            0  \n",
+       "12   2025-08-15          PONumber          189  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
