continue work in progress for tblUnit

--- a/angel_jpcode3/angel_access_tblUnit.ipynb
+++ b/angel_jpcode3/angel_access_tblUnit.ipynb
@@ -9,6 +9,18 @@
    "source": [
     "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6228d872",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract \n",
+    "\n",
+    "ld_add = pd.Timestamp.today()"
+   ]
   }
  ],
  "metadata": {
