saving changes to tblPO to push git

--- a/angel_jpcode3/angel_access_tblPO.ipynb
+++ b/angel_jpcode3/angel_access_tblPO.ipynb
@@ -405,7 +405,8 @@
     "    })\n",
     "\n",
     "\n",
-    "# Unexpected Value - PO doesnt exist in oracle data list fo PO orders\n"
+    "# Unexpected Value - PO doesnt exist in oracle data list fo PO orders\n",
+    "# set format rule or refer to PO numbers oracle? TBC"
    ]
   },
   {
@@ -483,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 138,
    "id": "065e84da",
    "metadata": {},
    "outputs": [
@@ -684,7 +685,7 @@
        "12   2025-08-15          PONumber          189  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
