parsing issue on imei2 applied

--- a/angel_jpcode3/angel_access_tblUnit.ipynb
+++ b/angel_jpcode3/angel_access_tblUnit.ipynb
@@ -219,7 +219,7 @@
     "parsed_access_tblunit_23_25[\"parsed_AllocatedUser\"] = parsed_access_tblunit_23_25[\"AllocatedUser\"].str.strip().replace(\"\", np.nan)\n",
     "parsed_access_tblunit_23_25[\"parsed_IMEI_1\"] = parsed_access_tblunit_23_25[\"IMEI_1\"].str.strip().replace(\"\", np.nan)\n",
     "\n",
-    "parsed_access_tblunit_23_25[\"parsed_IMEI_2\"] = parsed_access_tblunit_23_25[\"parsed_IMEI_2\"].str.strip().replace(\"\", np.nan) # not working as expected due various formats\n",
+    "#parsed_access_tblunit_23_25[\"parsed_IMEI_2\"] = parsed_access_tblunit_23_25[\"parsed_IMEI_2\"].str.strip().replace(\"\", np.nan) # not working as expected due various formats\n",
     "parsed_access_tblunit_23_25[\"parsed_MobilePhone\"] = parsed_access_tblunit_23_25[\"MobilePhone\"].str.strip().replace(\"\", np.nan)\n",
     "parsed_access_tblunit_23_25[\"parsed_DateRecieved\"] = pd.to_datetime(parsed_access_tblunit_23_25[\"DateRecieved\"], format=\"%d/%m/%Y\", dayfirst=True, errors=\"coerce\")\n",
     "\n",
@@ -231,7 +231,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
+   "id": "956b1f72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parsing issue tbc\n",
+    "\n",
+    "cleaned_values = []\n",
+    "\n",
+    "for value in parsed_access_tblunit_23_25[\"parsed_IMEI_2\"]:\n",
+    "    if pd.isnull(value):\n",
+    "        value_str = str(value).strip() #converrt string, remove spaces\n",
+    "        if value_str == \"\":\n",
+    "            cleaned_values.append(np.nan) # if empty set to NaN\n",
+    "        else:\n",
+    "            cleaned_values.append(value_str)\n",
+    "    else:\n",
+    "        cleaned_values.append(np.nan) # if already null, keep NaN\n",
+    "\n",
+    "\n",
+    "parsed_access_tblunit_23_25[\"parsed_IMEI_2\"] = cleaned_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "75ee5ec2",
    "metadata": {},
    "outputs": [
@@ -267,7 +292,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
